add grunt for css

--- a/app/www/js/templates/homeTemplate.html
+++ b/app/www/js/templates/homeTemplate.html
@@ -1,5 +1,6 @@
-<div class="content">
-  <br/><br/>
+<div class="header-navBar"><div class="nav-bar"><h2>Главная</h2></div></div>
+<div class="main-content">
   <h1><%= text %></h1>
   <center>Username: <%= name %></center>
+  <span>Second</span>
 </div>
