node server, socket server

--- a/app/www/js/templates/homeTemplate.html
+++ b/app/www/js/templates/homeTemplate.html
@@ -2,5 +2,7 @@
 <div class="main-content">
   <h1><%= text %></h1>
   <center>Username: <%= name %></center>
-  <span>Second</span>
+  <br>
+  <button data-event="test">Test socket connection</button>
+  <button data-node-event="test">Test database connection</button>
 </div>
