--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -41,6 +41,8 @@
 @import 'blocks/l-siteCopyright';
 @import 'blocks/b-developerCopyright';
 
+@import 'blocks/home';
+
 
 /**
 * Responsive & Print styles
