--- a/dev/src/sass/main.scss
+++ b/dev/src/sass/main.scss
@@ -27,6 +27,7 @@
 @import 'blocks/g-blocks';
 @import 'plugins/index';
 @import 'plugins/junior';
+@import 'plugins/bxslider';
 
 /* Project only code */
 @import 'blocks/common';
@@ -42,7 +43,7 @@
 @import 'blocks/b-developerCopyright';
 
 @import 'blocks/home';
-
+@import 'blocks/chat';
 
 /**
 * Responsive & Print styles
@@ -52,3 +53,4 @@
 @import 'responsive/device_mobile';
 @import 'responsive/media_queries';
 @import 'print';
+
