--- a/app/www/js/templates/homeTemplate.html
+++ b/app/www/js/templates/homeTemplate.html
@@ -8,11 +8,7 @@
   <% } %>
   
   <div class="b-viewMain">
-    <h1><%= data.text %></h1>
-    <center>Username: <%= data.name %></center>
-    <br>
-    <button data-event="test">Test socket connection</button>
-    <button data-node-event="test">Test database connection</button>
+    <span class="js-second">To chat</span>
   </div>
   
   <% if ( settings.footer.visible ) { %>
