create modules, small fixes

--- a/app/www/js/templates/homeTemplate.html
+++ b/app/www/js/templates/homeTemplate.html
@@ -3,7 +3,7 @@
   <% if ( settings.header.visible ) { %>
   <div class="b-viewHeader">
     <h2 class="b-viewHeader__title"><%= settings.header.title %></h2>
-    <!-- footer content -->
+    <!-- header content -->
   </div>
   <% } %>
   
