views, test view, registrator, router, app, load data

--- a/application/src/sass/main.scss
+++ b/application/src/sass/main.scss
@@ -47,3 +47,18 @@
 @import 'responsive/device_mobile';
 @import 'responsive/media_queries';
 
+
+#app-container {
+  .b-subContainer {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    transition: all 2s;
+  }
+
+  &.-state_animate {
+    .b-subContainer {
+      left: 0;
+    }
+  }
+}
