Create views Animate new views Default animation type Navigator Server request

--- a/application/src/js/common/templates/home.html
+++ b/application/src/js/common/templates/home.html
@@ -1,1 +1,4 @@
-<a href="#asd">To not found</a>
+<div data-page="asd" data-direction="up" class="js-pageLink">To NotFound up</div>
+<div data-page="asd" data-direction="down" class="js-pageLink">To NotFound down</div>
+<div data-page="asd" data-direction="left" class="js-pageLink">To NotFound left</div>
+<div data-page="asd" data-direction="right" class="js-pageLink">To NotFound right</div>
