--- a/application/src/js/common/templates/notFound.html
+++ b/application/src/js/common/templates/notFound.html
@@ -1,1 +1,4 @@
-<a href="#">To Home</a>
+<div data-page="/" data-direction="down" class="js-pageLink">To Home down</div>
+<div data-page="/" data-direction="up" class="js-pageLink">To Home up</div>
+<div data-page="/" data-direction="left" class="js-pageLink">To Home left</div>
+<div data-page="/" data-direction="right" class="js-pageLink">To Home right</div>
