--- a/application/src/sass/blocks/_common.scss
+++ b/application/src/sass/blocks/_common.scss
@@ -80,3 +80,94 @@ a {
     }
   }
 }
+
+
+/*
+  Animation
+ */
+
+$defaultDuration: 0.4s;
+
+.app-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.app-main {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translate3d(0, 0, 0);
+  will-change: transform;
+
+  &.-default_animation {
+    transition: transform $defaultDuration;
+  }
+
+  &.-animate_left  {
+    .-do_animation & {
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+
+  &.-animate_right {
+    .-do_animation & {
+      transform: translate3d(100%, 0, 0);
+    }
+  }
+
+  &.-animate_up {
+    .-do_animation & {
+      transform: translate3d(0, -100%, 0);
+    }
+  }
+
+  &.-animate_down {
+    .-do_animation & {
+      transform: translate3d(0, 100%, 0);
+    }
+  }
+}
+
+.b-subContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: orange;
+  box-shadow: #000 0 0 0 3px;
+  will-change: transform;
+
+  &.-default_animation {
+    transition: transform $defaultDuration;
+  }
+
+  &.-animate_left {
+    transform: translate3d(100%, 0, 0);
+  }
+
+  &.-animate_right {
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  &.-animate_up {
+    transform: translate3d(0, 100%, 0);
+  }
+
+  &.-animate_down {
+    transform: translate3d(0, -100%, 0);
+  }
+
+  .-do_animation & {
+    transform: translate3d(0, 0, 0);
+  }
+
+}
+
