promises, error module

--- a/application/src/js/common/templates/notFound.html
+++ b/application/src/js/common/templates/notFound.html
@@ -1,4 +1,4 @@
 <div data-page="/" data-direction="down" class="js-pageLink">To Home down</div>
 <div data-page="/" data-direction="up" class="js-pageLink">To Home up</div>
-<div data-page="/" data-direction="left" class="js-pageLink">To Home left</div>
+<div data-page="/" data-direction="left" class="js-pageLink" data-back="true">To Home left</div>
 <div data-page="/" data-direction="right" class="js-pageLink">To Home right</div>
