--- a/application/src/js/common/templates/home.html
+++ b/application/src/js/common/templates/home.html
@@ -3,9 +3,6 @@
 <div data-page="asd" data-direction="left" class="js-pageLink">To NotFound left</div>
 <div data-page="asd" data-direction="right" class="js-pageLink">To NotFound right</div>
 
-<!-- <h2>Collections</h2>
-<%= App.templates.userList(data.data.usersList) %> -->
-
 <form action="#" class="js-form">
   <div><input type="text" placeholder="name" name="name" value="Nick"></div>
   <div><input type="text" placeholder="age" name="age" value="12"></div>
@@ -13,8 +10,4 @@
   <button>Добавить</button>
 </form>
 
-<div class="js-users">
-  <h2>Users</h2>
-  <%= App.templates.auth(data.data.auth) %>
-  <%= App.templates.auth(data.data.auth2) %>
-</div>
+<div class="js-users"></div>
