module popup, custom popup initialize

--- a/application/src/js/common/templates/home.html
+++ b/application/src/js/common/templates/home.html
@@ -10,4 +10,6 @@
   <button>Добавить</button>
 </form>
 
+<div data-page="popup/testPopup" class="js-popup">Test popup</div>
+
 <div class="js-users"></div>
