--- a/application/src/js/common/templates/notFound.html
+++ b/application/src/js/common/templates/notFound.html
@@ -2,3 +2,5 @@
 <div data-page="/" data-direction="up" class="js-pageLink">To Home up</div>
 <div data-page="/" data-direction="left" class="js-pageLink" data-back="true">To Home left</div>
 <div data-page="/" data-direction="right" class="js-pageLink">To Home right</div>
+
+<div data-page="popup/testPopup" class="js-popup">Test popup</div>
