--- a/application/src/sass/blocks/_common.scss
+++ b/application/src/sass/blocks/_common.scss
@@ -81,6 +81,56 @@ a {
   }
 }
 
+/*
+  Popups styles
+ */
+.b-popups {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  z-index: -1;
+  
+
+  & > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+    z-index: 2;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    background: rgba(0,0,0,0.5);
+  }
+
+  &.-state_open {
+    display: block;
+    z-index: 10000;
+
+    &:before {
+      display: block;
+    }
+  }
+
+  .b-popupInner {
+    background-color: #fff;
+    position: absolute;
+  }
+}
+
 
 /*
   Animation
