default page animation

--- a/application/src/sass/main.scss
+++ b/application/src/sass/main.scss
@@ -23,6 +23,9 @@
 /* Framework Common Libraries */
 @import 'blocks/g-blocks';
 
+/* Framework Common Libraries */
+@import 'animations/_pageAnimateDefault';
+
 /* Project only code */
 @import 'blocks/common';
 @import 'blocks/sitemap';
