--- a/application/src/sass/blocks/_common.scss
+++ b/application/src/sass/blocks/_common.scss
@@ -7,10 +7,10 @@ a {
 .l-html {
 
 }
+
 .l-body {
   background: #fff;
 }
-
 
 /**
 * @section wrapper
@@ -29,7 +29,6 @@ a {
   position: relative;
 }
 
-
 /**
 * @section main
 */
@@ -44,7 +43,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  
+
   .b-viewHeader {
     position: absolute;
     left: 0;
@@ -67,7 +66,7 @@ a {
     height: 100%;
     overflow: hidden;
   }
-  
+
   &.-has_header {
     .b-viewMain {
       top: 50px;
@@ -92,7 +91,6 @@ a {
   bottom: 0;
   display: none;
   z-index: -1;
-  
 
   & > div {
     position: absolute;
@@ -113,7 +111,7 @@ a {
     height: 100%;
     z-index: 1;
     display: none;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.5);
   }
 
   &.-state_open {
@@ -130,15 +128,11 @@ a {
     position: absolute;
   }
 
-  
 }
-
 
 /*
   Animation
  */
-
-$defaultDuration: 0.4s;
 
 .app-container {
   position: fixed;
@@ -158,34 +152,6 @@ $defaultDuration: 0.4s;
   transform: translate3d(0, 0, 0);
   will-change: transform;
   overflow: auto;
-
-  &.-default_animation {
-    transition: transform $defaultDuration;
-  }
-
-  &.-animate_left  {
-    .-do_animation & {
-      transform: translate3d(-100%, 0, 0);
-    }
-  }
-
-  &.-animate_right {
-    .-do_animation & {
-      transform: translate3d(100%, 0, 0);
-    }
-  }
-
-  &.-animate_up {
-    .-do_animation & {
-      transform: translate3d(0, -100%, 0);
-    }
-  }
-
-  &.-animate_down {
-    .-do_animation & {
-      transform: translate3d(0, 100%, 0);
-    }
-  }
 }
 
 .b-subContainer {
@@ -197,30 +163,5 @@ $defaultDuration: 0.4s;
   background: orange;
   box-shadow: #000 0 0 0 3px;
   will-change: transform;
-
-  &.-default_animation {
-    transition: transform $defaultDuration;
-  }
-
-  &.-animate_left {
-    transform: translate3d(100%, 0, 0);
-  }
-
-  &.-animate_right {
-    transform: translate3d(-100%, 0, 0);
-  }
-
-  &.-animate_up {
-    transform: translate3d(0, 100%, 0);
-  }
-
-  &.-animate_down {
-    transform: translate3d(0, -100%, 0);
-  }
-
-  .-do_animation & {
-    transform: translate3d(0, 0, 0);
-  }
-
 }
 
