--- a/application/src/sass/blocks/_common.scss
+++ b/application/src/sass/blocks/_common.scss
@@ -110,22 +110,21 @@ a {
     width: 100%;
     height: 100%;
     z-index: 1;
-    display: none;
-    background: rgba(0, 0, 0, 0.5);
+    background: #000000;
+    opacity: 0;
   }
 
-  &.-state_open {
+  &.-state_open, &.-state_close {
     display: block;
     z-index: 10000;
-
-    &:before {
-      display: block;
-    }
   }
 
   .b-popupInner {
     background-color: #fff;
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
 }
